--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "vue-image-crop-upload": "^2.0.2"
+  }
 }
